@@ -13,6 +13,7 @@
   -improved Water Temple:
     -split up the chests
     -tried to model the reqs
+  -added the "free items" in as a counter for each dungeon
 1.0.0.4:
   -added small key counters
   -started adding open/closed forest/door logic
